# mechanic

./: LICENSE.txt  README.md  mechanic.py  pyproject.toml
src/mechanic_pytorch/: __about__.py  __init__.py  mechanic.py  mechanized_adamw.py
